# cityclerk_client

./: .gitignore  README.md  cityclerk_client.py  data_1.json  data_2.json  data_3.json  data_4.json  pyproject.toml  sample.py  test_api.py
output/: data_3.json  data_4.json
src/: cityclerk_client.py  sample.py
tests/: test_api.py
