[tool.poetry]
name = "crawler"
version = "0.1.0"
description = "A simple crawler"
authors = ["Quan"]

[tool.poetry.dependencies]
python = "^3.9.0"
requests = "^2.25.1"
bs4 = "^0.0.1"
pytest = "^7.4.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
